openapi: almost done
