# backend/src/openapi/paths/profile.yaml
@@ -4,7 +4,6 @@ info:
   version: 1.0.0
 paths: 
   /profile/status/: 
-
     get:
       tags:
         - "profile"
@@ -38,7 +37,108 @@ paths:
                   value: []
               schema:
                 $ref: "../schema/profile.yaml#/components/schemas/providers"
+  /profile/:
+    get:
+      security:
+        - BearerToken: []
+      parameters:
+        - $ref: '#/components/parameters/bearer'
+      tags:
+        - "profile"
+      summary: get profile
+      description: retrieve profile info
+      responses:
+        200:
+          $ref: '#/components/responses/profile'
+        401:
+          $ref: '#/components/responses/UnAuthorized'
+        442:
+          $ref: '#/components/responses/MalformedToken'
+        441:
+          $ref: '#/components/responses/SessionEnded'
+    put:
+      security:
+        - BearerToken: []
+      parameters:
+        - $ref: '#/components/parameters/bearer'
+      requestBody:
+        description: fields to update
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                displayName:
+                  type: string
+                  example: Joe Doe
+                picture:
+                  type: string
+                  example: https ://example.com/path/to/img"
+      tags:
+        - "profile"
+      summary: update profile 
+      description: update profile information
+      responses:
+        200:
+          $ref: '#/components/responses/profile'
+        401:
+          $ref: '#/components/responses/UnAuthorized'
+        442:
+          $ref: '#/components/responses/MalformedToken'
+        441:
+          $ref: '#/components/responses/SessionEnded'
+
+  /profile/password/:
+    put: 
+      security:
+        - BearerToken: []
+      parameters:
+        - $ref: '#/components/parameters/bearer'
+      requestBody:
+        description: update the password
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - newPassword
+              properties:
+                oldPassword:
+                  description: may be required if `local` authenticate is provided
+                  type: string
+                  example: 12345567
+                newPassword:
+                  type: string
+                  example: 12345567differentPassword
+      tags:
+        - "profile"
+      summary: (re)set password 
+      description: update users password
+      responses:
+        200:
+          $ref: '#/components/responses/profile'
+        400:
+          $ref: '#/components/responses/SomeFieldsRequired'
+        401:
+          $ref: '#/components/responses/UnAuthorized'
+        442:
+          $ref: '#/components/responses/MalformedToken'
+        441:
+          $ref: '#/components/responses/SessionEnded'
+
 components:
+  parameters:
+    bearer:
+      $ref: "../security/http.yaml#/components/parameters/bearer"
+
   responses:
+    profile:
+      $ref: "../success/profile.yaml#/components/responses/profile"
+    SessionEnded:
+      $ref: "../errors/SessionEnded.yaml#/components/responses/SessionEnded"
+    MalformedToken:
+      $ref: "../errors/MalformedToken.yaml#/components/responses/MalformedToken"
+    UnAuthorized:
+      $ref: "../errors/UnAuthorized.yaml#/components/responses/UnAuthorized"
     SomeFieldsRequired:
-      $ref: "../errors/400SomeFieldsRequired.yaml#/components/responses/SomeFieldsRequired"
+      $ref: "../errors/SomeFieldsRequired.yaml#/components/responses/SomeFieldsRequired"
